drag and drop functionality added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Invisible button</title>
   </head>
-  <body>
+  <body ondrop="drop(event)" ondragover="allowDrop(event)">
     <div class="container"></div>
     <div class="string"></div>
   </body>
