--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
     <link rel="stylesheet" href="style.css" />
     <title>Invisible button</title>
   </head>
-  <body ondrop="falseDrop(event)" ondragover="allowDrop(event)">
-    <div
-      class="drop-area"
-      ondrop="drop(event)"
-      ondragover="allowDrop(event)"
-    ></div>
+  <body>
+    <div id="drop" class="drop-area"></div>
     <div class="container"></div>
     <div class="string"></div>
   </body>
